--- a/c41bbac5166a8089bf5e605280fb52029c7a42bb/index.html
+++ b/c41bbac5166a8089bf5e605280fb52029c7a42bb/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>GelArt - Prototype Website</title>
+        <title>Gelato - Prototype Website</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">GelArt</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Gelato</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -40,7 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <!-- <div class="masthead-subheading">Gelato italiano</div> -->
-                <div class="masthead-heading text-uppercase">GelArt</div>
+                <div class="masthead-heading text-uppercase">Gelato</div>
                 <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
             </div>
         </header>
